2. When editing queue, and auto-scroll is enabled, don't scroll unless current
   track index changes.
3. Speed up initial page load, by not 'mounting' dialogs (settings, sync,
   etc.) until required.
4. Minify code for releases.
5. Don't add add/play-all buttons for A..Z groups.
6. Fix changing layout in settings.
7. Show spinner when click text items, as these may fetch items.

0.3.7
-----
1. Don't ignore clicks on items with a menu.
2. Fix some coding errors spotted by closure compiler.
3. Fix playing items from virtual libraries.
4. Fix clicking on CustomBrowse items.
5. If 'SB Player' is running on current Android device, then disable
   notification and lock screen controls. The code to make these persistent
   interferes with local playback.
6. Add a note to 'save defaults' dialog stating that 'Applicaiton layout' is
   not saved as a default.
7. Add custom add/remove favourite, and clear queue, icons.
9. Only allow to pin items that have an icon or image, and are not entry
   fields.

0.3.6
-----
1. Fix pinned apps.
2. Reduce list image size to 50px, as this matches what is requested from
   server.
3. Allow 'Scroll to current' to work even if player is off.
4. Check all command params for "album_id" when determining if can add a 'Play
   album starting at track' action.

0.3.5
-----
1. Fix clicking on server-supplied categories.

0.3.4
-----
 1. Fix sub-toolbar actions when showing album track list navigated into via a
    'More' menu, and add 'Play album starting at track' to tracks.
 2. Better 'Play album starting at track' handling.
 3. Remove 'SoundCloud' work-around, breaks others!
 4. Check any current track in queue for meta-data changes, not just those with
    a zero duration - as this is not a reliable way to detect a stream.
 5. Detect duration change of current item in queue.
 6. Centre info images in desktop view when showing 3 panes.
 7. Show sync icon in toolbar, even if player is off.
 8. Properly control when to show album rating button.